src/index.css
body {
  font-family: Arial, sans-serif;
  height: 100vh;
  width: 100vw;
  margin: 0;
}

#app {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#header {
  height: 100%;
  display: flex;
  flex-direction: column;
}

#descriptionList {
  flex-grow: 1;
  max-height: 10%;
  min-height: 40px;
  background-color: #222222;
  color: white;
  display: flex;
  align-items: center;
}

#descriptionList dt {
  padding: 5px;
}

#colors-list {
  display: flex;
  justify-content: space-evenly;
}

#colors-list li {
  height: 100px;
  width: 100px;
  border-radius: 50%;
  margin-top: 40px;
  transition: all 1s ease;
}

.selected {
  border: 2px solid black;
}

/* colors */
.red {
  background-color: #cf000f;
}
.orange {
  background-color: #eb6b56;
}
.yellow {
  background-color: #ffc153;
}
.green {
  background-color: #27ae60;
}
.blue {
  background-color: #1d4fda;
}
.violet {
  background-color: #462446;
}
.black {
  background-color: #000000;
}
.white {
  background-color: #ffffff;
}

